CPP_CORE/include/creative_core_api.h

typedef void* CreativeBrushHandle;
CreativeBrushHandle
cs_brush_create();
void
cs_brush_destroy(
    CreativeBrushHandle handle
);
void
cs_brush_set_size(
    CreativeBrushHandle handle,
    float size
);
void
cs_brush_set_opacity(
    CreativeBrushHandle handle,
    float opacity
);
void
cs_brush_set_flow(
    CreativeBrushHandle handle,
    float flow
);
void
cs_brush_set_hardness(
    CreativeBrushHandle handle,
    float hardness
);
void
cs_brush_set_spacing(
    CreativeBrushHandle handle,
    float spacing
);
void
cs_brush_set_color(
    CreativeBrushHandle handle,
    uint8_t red,
    uint8_t green,
    uint8_t blue,
    uint8_t alpha
);
void
cs_brush_begin_stroke(
    CreativeBrushHandle handle,
    float x,
    float y,
    float pressure
);
void
cs_brush_draw_segment(
    CreativeBrushHandle handle,
    uint8_t* rgba,
    int width,
    int height,
    int bytesPerLine,
    float startX,
    float startY,
    float startPressure,
    float endX,
    float endY,
    float endPressure
);
void
cs_brush_end_stroke(
    CreativeBrushHandle handle
);